--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Beta Version</string>
+    <string name="Email">Email</string>
+    <string name="Password">Password</string>
 </resources>
