--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Beta Version</string>
     <string name="Email">Email</string>
     <string name="Password">Password</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="username">Username</string>
 </resources>
