--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="mobile_number">Mobile Number</string>
     <string name="username">Username</string>
     <string name="home_second">Home Second</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="log_out">Log Out</string>
+    <string name="settings">Settings</string>
+    <string name="address">Address</string>
 </resources>
